--- a/main.tex
+++ b/main.tex
@@ -30,15 +30,15 @@
 
 %----------EDIT COVER INFO HERE -----------------%
 
-\def \LOGOPATH {assets/birzeit-logo.svg}
-\def \UNIVERSITY {Birzeit University}
-\def \FACULTY {Faculty of Engineering \& Technology}
-\def \DEPARTEMENT {Department of Electrical \& Computer Engineering}
-\def \PROJECTTITLE {Project Title}
-\def \STUDENTA {Student 1}
-\def \STUDENTB {Student 2}
-\def \STUDENTC {Student 3}
-\def \SUPERVISOR {Dr. Ahmad Ahmad}
+%\def \LOGOPATH {assets/birzeit-logo.svg}
+\def \UNIVERSITY {Indian Institute of Technology Hyderabad}
+%\def \FACULTY {Faculty of Engineering \& Technology}
+\def \DEPARTEMENT {Department of Computer Science and Engineering}
+\def \PROJECTTITLE {Covid Management and Data Tracking System}
+\def \STUDENTA {Tejal Kulkarni}
+\def \STUDENTB {Bhargava Ram}
+\def \STUDENTC {Jayachandra}
+\def \SUPERVISOR {MVP}
 
 %------------------------------------------------%
 
@@ -51,11 +51,11 @@
 \begin{titlepage}
     \vfill
     \begin{center}
-        \includesvg[width=0.6\textwidth]{\LOGOPATH} \\
+        %\includesvg[width=0.6\textwidth]{\LOGOPATH} \\
         \fontsize{14pt}{14pt}\selectfont
         \vfill
         \UNIVERSITY \\
-        \FACULTY \\
+        %\FACULTY \\
         \DEPARTEMENT \\
         \vfill
         \fontsize{18pt}{18pt}\selectfont
@@ -70,44 +70,42 @@
         Supervised By: \\
         \SUPERVISOR
         \vfill
-        A Graduation Project submitted to the Department of Electrical and Computer Engineering in partial fulfillment of the requirements for the degree of B.Sc. in Computer Engineering
+        A Software Development Fundamentals Project
         \vfill
-        Birzeit \\
-        April, 2022
-    \end{center}
+      \end{center}
 \end{titlepage}
 
 \dominitoc
 
 \include{chapters/abstract}
 
-\cleardoublepage \phantomsection \addcontentsline{toc}{chapter}{Table of Contents} \mtcaddchapter \tableofcontents
+%\cleardoublepage \phantomsection \addcontentsline{toc}{chapter}{Table of Contents} \mtcaddchapter \tableofcontents
 
-\cleardoublepage \phantomsection \addcontentsline{toc}{chapter}{List of Tables} \mtcaddchapter \listoftables
+%\cleardoublepage \phantomsection \addcontentsline{toc}{chapter}{List of Tables} \mtcaddchapter \listoftables
 
-\cleardoublepage \phantomsection \addcontentsline{toc}{chapter}{List of Figures} \mtcaddchapter \listoffigures
+%\cleardoublepage \phantomsection \addcontentsline{toc}{chapter}{List of Figures} \mtcaddchapter \listoffigures
 
 \cleardoublepage
 
 \setlength{\parindent}{0em}
 \setlength{\parskip}{0.5em}
 
-\pagenumbering{arabic}
+%\pagenumbering{arabic}
 
-\include{chapters/introduction_and_motivation}
+%\include{chapters/introduction_and_motivation}
 
-\include{chapters/background}
+%\include{chapters/background}
 
-\include{chapters/vit_acceleration_techniques}
+%\include{chapters/vit_acceleration_techniques}
 
-\include{chapters/proposed_work}
+%\include{chapters/proposed_work}
 
 \include{chapters/project_plan}
 
-\include{chapters/conclusion}
+%\include{chapters/conclusion}
 
-\cleardoublepage \phantomsection \addcontentsline{toc}{chapter}{Bibliography} \mtcaddchapter
-\bibliographystyle{ieeetr.bst}
-\bibliography{cites}
+%\cleardoublepage \phantomsection \addcontentsline{toc}{chapter}{Bibliography} \mtcaddchapter
+%\bibliographystyle{ieeetr.bst}
+%\bibliography{cites}
 
 \end{document}
